# coomoji

./: .env  Cargo.toml  README.md
migrations/: 20210317202818_all.sql
src/: db.rs  main.rs  model.rs
src/db/: emoji.rs  food.rs  game.rs  mod.rs  operation.rs  player.rs  player_inventory.rs  recipe.rs  story.rs
src/routes/: emoji.rs  mod.rs
src/routes/rest/: crafting.rs  emoji.rs  food.rs  game.rs  helper.rs  mod.rs  operation.rs  player.rs  recipe.rs  story.rs
src/routes/view/: mod.rs
templates/views/: emoji.html  food.html  operation.html  recipe.html
