[package]
name = "coomoji"
version = "0.1.0"
authors = ["Sebastian <Sebastian@Strobl.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.0.0-beta.4"
sqlx = { version = "0.5.1", features = ["runtime-actix-rustls", "postgres", "macros", "chrono", "decimal", "uuid", "json"] }
serde = { version = "1.0.115", features = ["derive"] }
serde_qs = "0.8.2"
serde_json = "1.0.57"
anyhow = "1.0.38"