[package]
name = "coomoji"
version = "0.1.0"
authors = ["Sebastian <Sebastian@Strobl.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3.2"
actix-cors = "0.5.4"
listenfd = "0.3.3"
tera = "1.7.0"
sqlx = { version = "0.3", features = ["postgres", "macros", "json"] }
serde = { version = "1.0.115", features = ["derive"] }
serde_qs = "0.8.2"
serde_json = "1.0.57"
anyhow = "1.0.38"
dotenv = "0.15.0"
futures = "0.3.13"